--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaiser Barbarossa KI</title>
+    <title>Frag Friedrich Barbarossa</title>
 
     <style>
       body {
@@ -14,15 +14,31 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        flex-direction: column;
+        font-family: "Georgia", serif;
+        color: white;
       }
+
+      h1 {
+        position: absolute;
+        top: 20px;
+        text-align: center;
+        width: 100%;
+        font-size: 2em;
+        color: #e0b36b;
+        text-shadow: 0 0 10px #000;
+        letter-spacing: 2px;
+      }
+
       #avatarCanvas {
         width: 100%;
         height: 100%;
         display: block;
       }
+
       #micBtn {
         position: absolute;
-        bottom: 40px;
+        bottom: 60px;
         left: 50%;
         transform: translateX(-50%);
         width: 80px;
@@ -33,16 +49,41 @@
         border: none;
         font-size: 32px;
         cursor: pointer;
+        z-index: 10;
       }
+
       #micBtn:hover {
         background: #444;
+      }
+
+      footer {
+        position: absolute;
+        bottom: 15px;
+        width: 100%;
+        text-align: center;
+        font-size: 0.8em;
+        color: #aaa;
+      }
+
+      footer a {
+        color: #aaa;
+        text-decoration: none;
+      }
+
+      footer a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
 
   <body>
+    <h1>Frag Friedrich</h1>
     <canvas id="avatarCanvas"></canvas>
     <button id="micBtn">🎤</button>
+
+    <footer>
+      © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
+    </footer>
 
     <!-- Three.js (r146: letzte Version mit globalem THREE + GLTFLoader) -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
@@ -53,7 +94,12 @@
 
       // === Szene, Kamera, Renderer ===
       const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
+      const camera = new THREE.PerspectiveCamera(
+        30,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
       camera.position.set(0, 0, 2);
 
       const renderer = new THREE.WebGLRenderer({
@@ -73,46 +119,42 @@
       // === Avatar laden ===
       const loader = new THREE.GLTFLoader();
       loader.load(
-        "avatar.glb", // MUSS im frontend-Ordner liegen
+        "./avatar.glb",
         (gltf) => {
           model = gltf.scene;
           model.scale.set(0.4, 0.4, 0.4);
           model.position.set(0, 0, 0);
           scene.add(model);
-
-          // Barbarossa begrüßt nach dem Laden
-          setTimeout(() => {
-            speak("Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?");
-          }, 1500);
-
           animate();
         },
         undefined,
         (err) => console.error("Fehler beim Laden des Modells:", err)
       );
 
-      // === Animation ===
+      // === Kopfbewegung während Sprache ===
+      let baseRotY = 0;
+      let baseRotX = 0;
       let baseY = 0;
-      let headTurn = 0;
 
       function animate() {
         requestAnimationFrame(animate);
         if (model) {
           if (talking) {
-            // leichte natürliche Kopfbewegungen beim Sprechen
-            headTurn += 0.01;
-            model.rotation.y = Math.sin(headTurn * 1.5) * 0.05; // horizontale Bewegung (langsamer, sanft)
-            model.rotation.x = Math.sin(headTurn * 0.7) * 0.02; // vertikal sehr gering
+            model.rotation.y =
+              baseRotY + Math.sin(Date.now() * 0.0018) * 0.08;
+            model.rotation.x =
+              baseRotX + Math.sin(Date.now() * 0.0022) * 0.04;
+            model.position.y = baseY + Math.sin(Date.now() * 0.015) * 0.008;
           } else {
-            // sanft zurück in Ausgangsposition
-            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.05);
-            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.05);
+            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.05);
+            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.05);
+            model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.05);
           }
         }
         renderer.render(scene, camera);
       }
 
-      // === Spracheingabe ===
+      // === Sprachsteuerung ===
       const micBtn = document.getElementById("micBtn");
       let recognizing = false;
       let recognition;
@@ -139,32 +181,43 @@
         };
 
         recognition.onend = () => (recognizing = false);
+      } else {
+        micBtn.onclick = () => {
+          alert(
+            "Sprachsteuerung wird von diesem Browser leider nicht unterstützt.\nBitte öffne mich in Chrome oder dem Samsung-Browser."
+          );
+        };
       }
 
       micBtn.onclick = () => {
-        if (recognizing) {
-          recognition.stop();
-          recognizing = false;
-          micBtn.style.background = "#222";
-        } else {
-          recognition.start();
-          recognizing = true;
-          micBtn.style.background = "#555";
+        if (recognition) {
+          if (recognizing) {
+            recognition.stop();
+            recognizing = false;
+            micBtn.style.background = "#222";
+          } else {
+            recognition.start();
+            recognizing = true;
+            micBtn.style.background = "#555";
+          }
         }
       };
 
-      // === Sprachsynthese ===
+      // === Sprachsynthese (tiefere männliche Stimme) ===
       function speak(text) {
         const utter = new SpeechSynthesisUtterance(text);
         utter.lang = "de-DE";
-        utter.rate = 1;
-        utter.pitch = 0.8;
+        utter.rate = 0.95;
+        utter.pitch = 0.6;
 
         const voices = speechSynthesis.getVoices();
-        utter.voice =
+        const maleVoice =
           voices.find(v => v.name.includes("Stefan")) ||
+          voices.find(v => v.name.includes("Male")) ||
           voices.find(v => v.lang.startsWith("de")) ||
           null;
+
+        utter.voice = maleVoice;
 
         utter.onstart = () => (talking = true);
         utter.onend = () => (talking = false);
@@ -175,7 +228,17 @@
       if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
         speechSynthesis.onvoiceschanged = () => {};
       }
+
+      // === Begrüßung erst nach Klick (Android-kompatibel) ===
+      let greeted = false;
+      window.addEventListener("click", () => {
+        if (!greeted) {
+          greeted = true;
+          speak(
+            "Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?"
+          );
+        }
+      });
     </script>
   </body>
 </html>
-
