--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,28 @@
         color: #e0b36b;
         text-shadow: 0 0 10px #000;
         letter-spacing: 2px;
+        animation: pulse 3s ease-in-out infinite;
+      }
+
+      @keyframes pulse {
+        0%, 100% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.05); opacity: 0.9; }
       }
 
       #avatarCanvas {
         width: 100%;
         height: 100%;
         display: block;
+      }
+
+      #loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #ccc;
+        font-size: 1.2em;
+        text-align: center;
       }
 
       #micBtn {
@@ -54,6 +70,15 @@
 
       #micBtn:hover {
         background: #444;
+      }
+
+      #micNotice {
+        position: absolute;
+        bottom: 140px;
+        text-align: center;
+        width: 100%;
+        color: #aaa;
+        font-size: 0.9em;
       }
 
       footer {
@@ -78,28 +103,24 @@
 
   <body>
     <h1>Frag Friedrich</h1>
+    <div id="loading">Avatar wird geladen…</div>
     <canvas id="avatarCanvas"></canvas>
     <button id="micBtn">🎤</button>
+    <div id="micNotice"></div>
 
     <footer>
       © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
     </footer>
 
-    <!-- Three.js (r146: letzte Version mit globalem THREE + GLTFLoader) -->
+    <!-- Three.js (r146) -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
     <script>
       let model, talking = false;
 
-      // === Szene, Kamera, Renderer ===
       const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(
-        30,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
+      const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 0, 2);
 
       const renderer = new THREE.WebGLRenderer({
@@ -110,14 +131,14 @@
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setClearColor(0x000000);
 
-      // === Beleuchtung ===
       const light = new THREE.DirectionalLight(0xffffff, 1.2);
       light.position.set(1, 1, 2);
       scene.add(light);
       scene.add(new THREE.AmbientLight(0x666666));
 
-      // === Avatar laden ===
       const loader = new THREE.GLTFLoader();
+      const loadingText = document.getElementById("loading");
+
       loader.load(
         "./avatar.glb",
         (gltf) => {
@@ -125,26 +146,22 @@
           model.scale.set(0.4, 0.4, 0.4);
           model.position.set(0, 0, 0);
           scene.add(model);
+          loadingText.style.display = "none";
           animate();
         },
         undefined,
         (err) => console.error("Fehler beim Laden des Modells:", err)
       );
 
-      // === Kopfbewegung während Sprache ===
-      let baseRotY = 0;
-      let baseRotX = 0;
-      let baseY = 0;
+      let baseRotY = 0, baseRotX = 0, baseY = 0;
 
       function animate() {
         requestAnimationFrame(animate);
         if (model) {
           if (talking) {
-            model.rotation.y =
-              baseRotY + Math.sin(Date.now() * 0.0018) * 0.08;
-            model.rotation.x =
-              baseRotX + Math.sin(Date.now() * 0.0022) * 0.04;
-            model.position.y = baseY + Math.sin(Date.now() * 0.015) * 0.008;
+            model.rotation.y = baseRotY + Math.sin(Date.now() * 0.0015) * 0.04;
+            model.rotation.x = baseRotX + Math.sin(Date.now() * 0.0019) * 0.025;
+            model.position.y = baseY + Math.sin(Date.now() * 0.01) * 0.004;
           } else {
             model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.05);
             model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.05);
@@ -156,6 +173,7 @@
 
       // === Sprachsteuerung ===
       const micBtn = document.getElementById("micBtn");
+      const micNotice = document.getElementById("micNotice");
       let recognizing = false;
       let recognition;
 
@@ -168,25 +186,18 @@
         recognition.onresult = async (event) => {
           const text = event.results[0][0].transcript;
           console.log("🎙️ Gesprochen:", text);
-
           const response = await fetch("/ask", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ text }),
           });
-
           const data = await response.json();
-          console.log("💬 Antwort:", data.answer);
           speak(data.answer);
         };
 
         recognition.onend = () => (recognizing = false);
       } else {
-        micBtn.onclick = () => {
-          alert(
-            "Sprachsteuerung wird von diesem Browser leider nicht unterstützt.\nBitte öffne mich in Chrome oder dem Samsung-Browser."
-          );
-        };
+        micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt (z. B. Firefox).";
       }
 
       micBtn.onclick = () => {
@@ -203,40 +214,37 @@
         }
       };
 
-      // === Sprachsynthese (tiefere männliche Stimme) ===
+      // === Männliche Stimme erzwingen ===
+      function getMaleVoice() {
+        const voices = speechSynthesis.getVoices();
+        return (
+          voices.find(v => /male|mann|stefan|markus|male/i.test(v.name)) ||
+          voices.find(v => v.lang.startsWith("de")) ||
+          voices[0]
+        );
+      }
+
       function speak(text) {
         const utter = new SpeechSynthesisUtterance(text);
         utter.lang = "de-DE";
         utter.rate = 0.95;
         utter.pitch = 0.6;
-
-        const voices = speechSynthesis.getVoices();
-        const maleVoice =
-          voices.find(v => v.name.includes("Stefan")) ||
-          voices.find(v => v.name.includes("Male")) ||
-          voices.find(v => v.lang.startsWith("de")) ||
-          null;
-
-        utter.voice = maleVoice;
-
+        utter.voice = getMaleVoice();
         utter.onstart = () => (talking = true);
         utter.onend = () => (talking = false);
-
         speechSynthesis.speak(utter);
       }
 
       if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
-        speechSynthesis.onvoiceschanged = () => {};
+        speechSynthesis.onvoiceschanged = getMaleVoice;
       }
 
-      // === Begrüßung erst nach Klick (Android-kompatibel) ===
+      // === Begrüßung nach erster Berührung ===
       let greeted = false;
       window.addEventListener("click", () => {
         if (!greeted) {
           greeted = true;
-          speak(
-            "Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?"
-          );
+          speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
         }
       });
     </script>
