--- a/frontend/index.html
+++ b/frontend/index.html
@@ -217,18 +217,25 @@
       // === Männliche Stimme erzwingen ===
       function getMaleVoice() {
         const voices = speechSynthesis.getVoices();
+        console.log("🔊 Verfügbare Stimmen:", voices.map(v => v.name));
+        // Suche gezielt männlich klingende Stimme
         return (
-          voices.find(v => /male|mann|stefan|markus|male/i.test(v.name)) ||
+          voices.find(v => /male|mann|stefan|markus|hans|deutsch/i.test(v.name)) ||
           voices.find(v => v.lang.startsWith("de")) ||
           voices[0]
         );
       }
 
       function speak(text) {
+        if (!("speechSynthesis" in window)) {
+          alert("Sprachausgabe wird in diesem Browser nicht unterstützt.");
+          return;
+        }
+
         const utter = new SpeechSynthesisUtterance(text);
         utter.lang = "de-DE";
-        utter.rate = 0.95;
-        utter.pitch = 0.6;
+        utter.rate = 0.9;   // etwas langsamer
+        utter.pitch = 0.5;  // tiefer, männlicher
         utter.voice = getMaleVoice();
         utter.onstart = () => (talking = true);
         utter.onend = () => (talking = false);
@@ -238,6 +245,15 @@
       if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
         speechSynthesis.onvoiceschanged = getMaleVoice;
       }
+
+      // === Begrüßung nach erster Berührung ===
+      let greeted = false;
+      window.addEventListener("click", () => {
+        if (!greeted) {
+          greeted = true;
+          speak("Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?");
+        }
+      });
 
       // === Begrüßung nach erster Berührung ===
       let greeted = false;
