--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frag Friedrich – Barbarossa KI</title>
+    <title>Frag Friedrich Barbarossa</title>
 
     <style>
       body {
@@ -11,28 +11,29 @@
         overflow: hidden;
         background-color: black;
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        font-family: "Cinzel", serif;
-        color: #f2e6c9;
+        flex-direction: column;
+        font-family: "Georgia", serif;
+        color: white;
       }
 
       h1 {
-        font-size: 2rem;
-        margin-bottom: 10px;
-        text-shadow: 0 0 10px rgba(255, 215, 0, 0.7);
-        animation: pulse 3s infinite alternate;
+        position: absolute;
+        top: 20px;
+        text-align: center;
+        width: 100%;
+        font-size: 2em;
+        color: #e0b36b;
+        text-shadow: 0 0 10px #000;
+        letter-spacing: 2px;
+        animation: pulse 3s ease-in-out infinite;
       }
 
       @keyframes pulse {
-        from {
-          opacity: 0.7;
-        }
-        to {
-          opacity: 1;
-        }
+        0%, 100% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.05); opacity: 0.9; }
       }
 
       #avatarCanvas {
@@ -41,9 +42,19 @@
         display: block;
       }
 
+      #loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #ccc;
+        font-size: 1.2em;
+        text-align: center;
+      }
+
       #micBtn {
         position: absolute;
-        bottom: 50px;
+        bottom: 60px;
         left: 50%;
         transform: translateX(-50%);
         width: 80px;
@@ -54,30 +65,33 @@
         border: none;
         font-size: 32px;
         cursor: pointer;
-        transition: background 0.3s;
+        z-index: 10;
       }
 
       #micBtn:hover {
         background: #444;
       }
 
-      #loading {
+      #micNotice {
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 1.2rem;
-        color: #bbb;
+        bottom: 140px;
+        text-align: center;
+        width: 100%;
+        color: #aaa;
+        font-size: 0.9em;
       }
 
       footer {
         position: absolute;
-        bottom: 10px;
-        font-size: 0.8rem;
-        color: #999;
+        bottom: 15px;
+        width: 100%;
+        text-align: center;
+        font-size: 0.8em;
+        color: #aaa;
       }
 
       footer a {
-        color: #ccc;
+        color: #aaa;
         text-decoration: none;
       }
 
@@ -89,21 +103,22 @@
 
   <body>
     <h1>Frag Friedrich</h1>
-    <div id="loading">🕯️ Avatar wird geladen …</div>
+    <div id="loading">Avatar wird geladen…</div>
     <canvas id="avatarCanvas"></canvas>
     <button id="micBtn">🎤</button>
+    <div id="micNotice"></div>
+
     <footer>
       © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
     </footer>
 
-    <!-- Three.js (r146: letzte Version mit globalem THREE + GLTFLoader) -->
+    <!-- Three.js (r146) -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
     <script>
       let model, talking = false;
 
-      // === Szene, Kamera, Renderer ===
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 0, 2);
@@ -116,13 +131,11 @@
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setClearColor(0x000000);
 
-      // === Licht ===
       const light = new THREE.DirectionalLight(0xffffff, 1.2);
       light.position.set(1, 1, 2);
       scene.add(light);
-      scene.add(new THREE.AmbientLight(0x555555));
+      scene.add(new THREE.AmbientLight(0x666666));
 
-      // === Avatar laden ===
       const loader = new THREE.GLTFLoader();
       const loadingText = document.getElementById("loading");
 
@@ -135,35 +148,32 @@
           scene.add(model);
           loadingText.style.display = "none";
           animate();
-          // Begrüßung abspielen
-          speak("Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg in Lautern geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?");
         },
         undefined,
-        (err) => {
-          loadingText.textContent = "Fehler beim Laden des Avatars.";
-          console.error("Fehler beim Laden des Modells:", err);
-        }
+        (err) => console.error("Fehler beim Laden des Modells:", err)
       );
 
-      // === Animation ===
-      let baseY = 0, angle = 0;
+      let baseRotY = 0, baseRotX = 0, baseY = 0;
+
       function animate() {
         requestAnimationFrame(animate);
         if (model) {
           if (talking) {
-            angle += 0.02;
-            model.rotation.y = Math.sin(angle * 0.6) * 0.03; // sanfte horizontale Bewegung
-            model.position.y = baseY + Math.sin(angle) * 0.008; // dezente vertikale Bewegung
+            model.rotation.y = baseRotY + Math.sin(Date.now() * 0.0015) * 0.04;
+            model.rotation.x = baseRotX + Math.sin(Date.now() * 0.0019) * 0.025;
+            model.position.y = baseY + Math.sin(Date.now() * 0.01) * 0.004;
           } else {
-            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.05);
+            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.05);
+            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.05);
             model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.05);
           }
         }
         renderer.render(scene, camera);
       }
 
-      // === Spracheingabe ===
+      // === Sprachsteuerung ===
       const micBtn = document.getElementById("micBtn");
+      const micNotice = document.getElementById("micNotice");
       let recognizing = false;
       let recognition;
 
@@ -182,50 +192,67 @@
             body: JSON.stringify({ text }),
           });
           const data = await response.json();
-          console.log("💬 Antwort:", data.answer);
           speak(data.answer);
         };
 
         recognition.onend = () => (recognizing = false);
       } else {
-        console.warn("❌ Spracheingabe wird in diesem Browser nicht unterstützt.Bitte in anderem Browser versuchen.");
+        micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt (z. B. Firefox). Bitte in anderem Browser öffnen (z.B. Chrome, Samsung)";
       }
 
       micBtn.onclick = () => {
-        if (recognizing) {
-          recognition.stop();
-          recognizing = false;
-          micBtn.style.background = "#222";
-        } else {
-          recognition.start();
-          recognizing = true;
-          micBtn.style.background = "#555";
+        if (recognition) {
+          if (recognizing) {
+            recognition.stop();
+            recognizing = false;
+            micBtn.style.background = "#222";
+          } else {
+            recognition.start();
+            recognizing = true;
+            micBtn.style.background = "#555";
+          }
         }
       };
 
-      // === Sprachausgabe über Server (männlich, tief) ===
-      async function speak(text) {
-        try {
-          const res = await fetch("/tts", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ text }),
-          });
-          const blob = await res.blob();
-          const url = URL.createObjectURL(blob);
-          const audio = new Audio(url);
-          talking = true;
-          audio.onended = () => (talking = false);
-          await audio.play();
-        } catch (err) {
-          console.error("🔇 Fehler bei Sprachausgabe:", err);
-        }
+      // === Männliche Stimme erzwingen ===
+      function getMaleVoice() {
+        const voices = speechSynthesis.getVoices();
+        console.log("🔊 Verfügbare Stimmen:", voices.map(v => v.name));
+        // Suche gezielt männlich klingende Stimme
+        return (
+          voices.find(v => /male|mann|stefan|markus|hans|deutsch/i.test(v.name)) ||
+          voices.find(v => v.lang.startsWith("de")) ||
+          voices[0]
+        );
       }
 
-      window.addEventListener("resize", () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
+      function speak(text) {
+        if (!("speechSynthesis" in window)) {
+          alert("Sprachausgabe wird in diesem Browser nicht unterstützt.");
+          return;
+        }
+
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = "de-DE";
+        utter.rate = 0.9;   // etwas langsamer
+        utter.pitch = 0.5;  // tiefer, männlicher
+        utter.voice = getMaleVoice();
+        utter.onstart = () => (talking = true);
+        utter.onend = () => (talking = false);
+        speechSynthesis.speak(utter);
+      }
+
+      if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
+        speechSynthesis.onvoiceschanged = getMaleVoice;
+      }
+
+           // === Begrüßung nach erster Berührung ===
+      let greeted = false;
+      window.addEventListener("click", () => {
+        if (!greeted) {
+          greeted = true;
+          speak("Hallo, ich bin Friedrich Barbarossa. Ich habe nun bald tausend Jahre im Kaiserberg in Lautern geschlafen. Jetzt hast du mich geweckt. Was ist dein Begehr?");
+        }
       });
     </script>
   </body>
