--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frag Friedrich Barbarossa<br><font size="2">(Berühr mich)</font></title>
+    <title>Frag Friedrich Barbarossa<br><font size="2"><p style="color: yellow;">(Berühr mich)</P></font></title>
 
     <style>
       body {
