--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frag Friedrich Barbarossa<br><font size="2"><p style="color: yellow;">(Berühr mich)</P></font></title>
+    <title>Frag Friedrich Barbarossa</title>
 
     <style>
       body {
@@ -109,7 +109,7 @@
     <div id="micNotice"></div>
 
     <footer>
-      © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a><br>Zum Fragen kurz Mikro drücken, nach Ende der Frage nochmal Mikro drücken
+      © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a><br>Zum Starten den Kopf antippen, zum Fragen kurz Mikro drücken, nach Ende der Frage nochmal Mikro drücken
     </footer>
 
     <!-- Three.js (r146) -->
