--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,133 +120,4 @@
       let model, talking = false;
 
       const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 0, 2);
-
-      const renderer = new THREE.WebGLRenderer({
-        canvas: document.getElementById("avatarCanvas"),
-        antialias: true,
-      });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.setPixelRatio(window.devicePixelRatio);
-      renderer.setClearColor(0x000000);
-
-      const light = new THREE.DirectionalLight(0xffffff, 1.2);
-      light.position.set(1, 1, 2);
-      scene.add(light);
-      scene.add(new THREE.AmbientLight(0x666666));
-
-      const loader = new THREE.GLTFLoader();
-      const loadingText = document.getElementById("loading");
-
-      loader.load(
-        "./avatar.glb",
-        (gltf) => {
-          model = gltf.scene;
-          model.scale.set(0.4, 0.4, 0.4);
-          model.position.set(0, 0, 0);
-          scene.add(model);
-          loadingText.style.display = "none";
-          animate();
-        },
-        undefined,
-        (err) => console.error("Fehler beim Laden des Modells:", err)
-      );
-
-      let baseRotY = 0, baseRotX = 0, baseY = 0;
-
-      function animate() {
-        requestAnimationFrame(animate);
-        if (model) {
-          if (talking) {
-            model.rotation.y = baseRotY + Math.sin(Date.now() * 0.0015) * 0.04;
-            model.rotation.x = baseRotX + Math.sin(Date.now() * 0.0019) * 0.025;
-            model.position.y = baseY + Math.sin(Date.now() * 0.01) * 0.004;
-          } else {
-            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.05);
-            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.05);
-            model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.05);
-          }
-        }
-        renderer.render(scene, camera);
-      }
-
-      // === Sprachsteuerung ===
-      const micBtn = document.getElementById("micBtn");
-      const micNotice = document.getElementById("micNotice");
-      let recognizing = false;
-      let recognition;
-
-      if ("webkitSpeechRecognition" in window) {
-        recognition = new webkitSpeechRecognition();
-        recognition.lang = "de-DE";
-        recognition.continuous = false;
-        recognition.interimResults = false;
-
-        recognition.onresult = async (event) => {
-          const text = event.results[0][0].transcript;
-          console.log("🎙️ Gesprochen:", text);
-          const response = await fetch("/ask", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ text }),
-          });
-          const data = await response.json();
-          speak(data.answer);
-        };
-
-        recognition.onend = () => (recognizing = false);
-      } else {
-        micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt, bitte anderen Browser verwenden.";
-      }
-
-      micBtn.onclick = () => {
-        if (recognition) {
-          if (recognizing) {
-            recognition.stop();
-            recognizing = false;
-            micBtn.style.background = "#222";
-          } else {
-            recognition.start();
-            recognizing = true;
-            micBtn.style.background = "#555";
-          }
-        }
-      };
-
-      // === Männliche Stimme erzwingen ===
-      function getMaleVoice() {
-        const voices = speechSynthesis.getVoices();
-        return (
-          voices.find(v => /male|mann|stefan|markus|male/i.test(v.name)) ||
-          voices.find(v => v.lang.startsWith("de")) ||
-          voices[0]
-        );
-      }
-
-      function speak(text) {
-        const utter = new SpeechSynthesisUtterance(text);
-        utter.lang = "de-DE";
-        utter.rate = 0.95;
-        utter.pitch = 0.6;
-        utter.voice = getMaleVoice();
-        utter.onstart = () => (talking = true);
-        utter.onend = () => (talking = false);
-        speechSynthesis.speak(utter);
-      }
-
-      if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
-        speechSynthesis.onvoiceschanged = getMaleVoice;
-      }
-
-      // === Begrüßung nach erster Berührung ===
-      let greeted = false;
-      window.addEventListener("click", () => {
-        if (!greeted) {
-          greeted = true;
-          speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-        }
-      });
-    </script>
-  </body>
-</html>
+      const camera = new THREE.PerspectiveCamera(30, window.innerWidth
