--- a/frontend/index.html
+++ b/frontend/index.html
@@ -124,7 +124,7 @@
 
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 0, 2.5);
+      camera.position.set(0, 0, 2.8);
 
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById("avatarCanvas"),
@@ -147,9 +147,13 @@
         (gltf) => {
           model = gltf.scene;
 
-          model.rotation.y = baseRotY;
-          model.position.set(0, baseY, 0);
-          model.scale.set(0.7, 0.7, 0.7);
+          model.rotation.y = -Math.PI / 2;
+baseRotY = -Math.PI / 2;
+
+model.position.set(0, 0.05, 0);
+baseY = 0.05;
+
+model.scale.set(0.6, 0.6, 0.6);
 
           scene.add(model);
           loadingText.style.display = "none";
