--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,10 +134,10 @@
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setClearColor(0x000000);
 
-      const light = new THREE.DirectionalLight(0xffffff, 1.2);
+      const light = new THREE.DirectionalLight(0xffffff, 2);
       light.position.set(1, 1, 2);
       scene.add(light);
-      scene.add(new THREE.AmbientLight(0x666666));
+      scene.add(new THREE.AmbientLight(0xffffff, 0.8);
 
       const loader = new THREE.GLTFLoader();
       const loadingText = document.getElementById("loading");
@@ -153,7 +153,7 @@ baseRotY = -Math.PI / 2;
 model.position.set(0, 0.05, 0);
 baseY = 0.05;
 
-model.scale.set(0.6, 0.6, 0.6);
+model.scale.set(0.8, 0.8, 0.8);
 
           scene.add(model);
           loadingText.style.display = "none";
