--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,7 +137,7 @@
       const light = new THREE.DirectionalLight(0xffffff, 2);
       light.position.set(1, 1, 2);
       scene.add(light);
-      scene.add(new THREE.AmbientLight(0xffffff, 0.8);
+      scene.add(new THREE.AmbientLight(0xffffff, 0.8));
 
       const loader = new THREE.GLTFLoader();
       const loadingText = document.getElementById("loading");
