--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 0, 2.8);
-
+      
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById("avatarCanvas"),
         antialias: true,
@@ -138,6 +138,9 @@
       light.position.set(1, 1, 2);
       scene.add(light);
       scene.add(new THREE.AmbientLight(0xffffff, 0.8));
+      const frontLight = new THREE.PointLight(0xffffff, 0.6);
+      frontLight.position.set(0, 0.5, 2);
+      scene.add(frontLight);
 
       const loader = new THREE.GLTFLoader();
       const loadingText = document.getElementById("loading");
@@ -150,10 +153,10 @@
           model.rotation.y = -Math.PI / 2;
 baseRotY = -Math.PI / 2;
 
-model.position.set(0, 0.05, 0);
+model.position.set(0, 0.07, 0);
 baseY = 0.05;
 
-model.scale.set(0.8, 0.8, 0.8);
+model.scale.set(0.9, 0.9, 0.9);
 
           scene.add(model);
           loadingText.style.display = "none";
